new tests, all working except for the settings stuff
